# timetable-assistant-bot

./: .env.example  .gitignore  Dockerfile  README.md  configuration.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  structure.txt
docs/: INSTALL.md  LLM_SETUP.md  acceptance_tests.md  architecture.md  onboarding.md  spec.md
journal/: 01_reply_mode.md  02_parser_rules.md  03_storage_schema.md  04_metrics_and_feedback.md  05_config_loading.md  06_russian_inflections.md  07_weekday_resolution.md  08_unknown_city_timezone.md  09_platform_adapters_and_entrypoint.md  10_test_suite_foundation.md  11_engine_e2e_and_parser_tests.md  PROGRESS.md
src/: config.py  conversion.py  discord_bot.py  engine.py  formatting.py  main.py  models.py  parser.py  storage.py  telegram_bot.py  timezones.py
src/llm/: hybrid_parser.py  llm_parser.py  prompts.py  providers.py
tests/: conftest.py  test_commands_storage.py  test_conversion.py  test_discord_flow.py  test_engine_ignores_bots_and_edits.py  test_engine_onboarding_missing_sender_timezone.py  test_engine_unknown_timezone.py  test_formatting_date_on_both_sides.py  test_metrics_events.py  test_parser_en.py  test_parser_ru.py  test_storage_active_timezones.py  test_telegram_flow.py  test_timezone_resolution.py  test_weekday_resolution.py
